--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 #数据库连接池配置
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 #数据库连接
-spring.datasource.druid.name=test
+spring.datasource.druid.name=graduation
 spring.datasource.druid.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.druid.url=jdbc:mysql://localhost:3306/graduation?characterEncoding=utf-8&serverTimezone=GMT%2B8
 spring.datasource.druid.username=root
@@ -26,11 +26,7 @@ spring.datasource.druid.test-on-return=false
 spring.datasource.druid.pool-prepared-statements=false
 spring.datasource.druid.max-pool-prepared-statement-per-connection-size=20
 # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
-spring.datasource.druid.filter.commons-log.connection-logger-name=stat,wall,log4j
-spring.datasource.druid.filter.stat.log-slow-sql=true
-spring.datasource.druid.filter.stat.slow-sql-millis=2000
-# 通过connectProperties属性来打开mergeSql功能；慢SQL记录
-spring.datasource.druid.connect-properties.=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+spring.datasource.druid.filters=stat,wall
 # 合并多个DruidDataSource的监控数据
 spring.datasource.druid.use-global-data-source-stat=true
 
